@@ -7,11 +7,8 @@
 #define NEED_FAIL_ARG_TYPES
 #include "glspi.h"
 
-#include "editor.h"
 
-
-
-#define DOCS ((GeanyDocument**)(documents_array->pdata))
+#define DOCS ((GeanyDocument**)(geany->documents_array->pdata))
 #define NOTEBOOK GTK_NOTEBOOK(main_widgets->notebook)
 
 
@@ -41,21 +38,21 @@ static gint glspi_newfile(lua_State* L)
 		fn=lua_tostring(L, 1);
 		if ( '\0' == fn[0] ) { fn = NULL; }
 	}
-	p_document->new_file(fn, NULL, NULL);
+	document_new_file(fn, NULL, NULL);
 	return 0;
 }
 
 
 
 /*
-  Try to find the documents_array index of the specified filename.
+  Try to find the geany->documents_array index of the specified filename.
   Returns -1 if the filename doesn't match any open tabs.
 */
 static gint filename_to_doc_idx(const gchar*fn)
 {
 	if (fn && *fn) {
 		guint i;
-		for(i = 0; i < documents_array->len; i++) {
+		for(i = 0; i < geany->documents_array->len; i++) {
 			if fncmp(fn,DOCS[i]->file_name) {return i; }
 		}
 	}
@@ -63,11 +60,11 @@ static gint filename_to_doc_idx(const gchar*fn)
 }
 
 
-/* Converts a documents_array index to a notebook tab index */
+/* Converts a geany->documents_array index to a notebook tab index */
 static gint doc_idx_to_tab_idx(gint idx)
 {
 	return (
-		(idx>=0) && ((guint)idx<documents_array->len) && DOCS[idx]->is_valid
+		(idx>=0) && ((guint)idx<geany->documents_array->len) && DOCS[idx]->is_valid
 	) ? gtk_notebook_page_num(NOTEBOOK, GTK_WIDGET(DOCS[idx]->editor->sci)):-1;
 }
 
@@ -75,8 +72,8 @@ static gint doc_idx_to_tab_idx(gint idx)
 
 /* Returns the filename of the specified document, or NULL on bad index */
 static const gchar* doc_idx_to_filename(gint idx) {
-	 if ( (idx >= 0 ) && ( ((guint)idx) < documents_array->len ) ) { 
-		GeanyDocument *doc=g_ptr_array_index(documents_array, idx);
+	 if ( (idx >= 0 ) && ( ((guint)idx) < geany->documents_array->len ) ) { 
+		GeanyDocument *doc=g_ptr_array_index(geany->documents_array, idx);
 		if (doc) { return doc->file_name?doc->file_name:GEANY_STRING_UNTITLED; }
 	}
 	return NULL;
@@ -94,7 +91,7 @@ static gint glspi_activate(lua_State* L)
 			if (idx<0) { /* Negative number refers to (absolute) GtkNotebook index */
 				idx=(0-idx)-1;
 				if (idx>=gtk_notebook_get_n_pages(NOTEBOOK)) { idx=-1;}
-			} else { /* A positive number refers to the documents_array index */
+			} else { /* A positive number refers to the geany->documents_array index */
 				idx=doc_idx_to_tab_idx(idx-1);
 			}
 			
@@ -121,7 +118,7 @@ static gint glspi_activate(lua_State* L)
 static gint documents_closure(lua_State *L)
 {
 	gint idx=lua_tonumber(L, lua_upvalueindex(1));
-	int max=documents_array->len;
+	int max=geany->documents_array->len;
 	do { 
 		/* Find next valid index, skipping invalid (closed)  files */
 		idx++; 
@@ -176,7 +173,7 @@ static gint glspi_documents(lua_State *L)
 static gint glspi_count(lua_State* L)
 {
 	guint i, n=0;
-	for (i=0; i<documents_array->len; i++) {
+	for (i=0; i<geany->documents_array->len; i++) {
 		if (DOCS[i]->is_valid){n++;}
 	}
 	push_number(L,n);
@@ -190,15 +187,15 @@ static gint glspi_save(lua_State* L)
 	gboolean status=FALSE;
 	if (lua_gettop(L)==0){
 		DOC_REQUIRED
-		status=p_document->save_file(p_document->get_current(), TRUE);
+		status=document_save_file(document_get_current(), TRUE);
 	} else {
 		if (lua_isnumber(L,1)) {
 			gint idx=(gint)lua_tonumber(L,1)-1;
-			status=p_document->save_file(DOCS[idx], TRUE);
+			status=document_save_file(DOCS[idx], TRUE);
 		} else {
 			if (lua_isstring(L,1)) {
 				gint idx=filename_to_doc_idx(lua_tostring(L,1));
-				status=p_document->save_file(DOCS[idx], TRUE);
+				status=document_save_file(DOCS[idx], TRUE);
 			} else { return FAIL_STR_OR_NUM_ARG(1);	}
 		}
 	}
@@ -216,7 +213,7 @@ static gint glspi_open(lua_State* L)
 
 	if (lua_gettop(L)==0) {
 		DOC_REQUIRED
-		idx=p_document->get_current()->index;
+		idx=document_get_current()->index;
 	} else {
 		if (lua_isnumber(L,1)) {
 			idx=lua_tonumber(L,1)-1;
@@ -227,17 +224,17 @@ static gint glspi_open(lua_State* L)
 		}
 	}
 	if (!fn) {
-		status=p_document->reload_file(DOCS[idx],NULL) ? idx : -1;
+		status=document_reload_file(DOCS[idx],NULL) ? idx : -1;
 	} else {
-		guint len=documents_array->len;
-		GeanyDocument*doc=p_document->open_file(fn,FALSE,NULL,NULL);
+		guint len=geany->documents_array->len;
+		GeanyDocument*doc=document_open_file(fn,FALSE,NULL,NULL);
 		status=doc?doc->index:-1;
-		if ( (status>=0) && (len==documents_array->len))
+		if ( (status>=0) && (len==geany->documents_array->len))
 		{ 
 			/* if len doesn't change, it means we are reloading an already open file */
 			/* ntrel: actually, len can stay the same when reusing invalid document slots. */
-			idx=p_document->get_current()->index;
-			status=p_document->reload_file(DOCS[idx],NULL) ? idx : -1;
+			idx=document_get_current()->index;
+			status=document_reload_file(DOCS[idx],NULL) ? idx : -1;
 		}
 	}
 	push_number(L,status+1);
@@ -251,15 +248,15 @@ static gint glspi_close(lua_State* L)
 	gboolean status=FALSE;
 	if (lua_gettop(L)==0){
 		DOC_REQUIRED
-		status=p_document->close(p_document->get_current());
+		status=document_close(document_get_current());
 	} else {
 		if (lua_isnumber(L,1)) {
 			guint idx=(guint)lua_tonumber(L,1)-1;
-			status=p_document->close(DOCS[idx]);
+			status=document_close(DOCS[idx]);
 		} else {
 			if (lua_isstring(L,1)) {
 				guint idx=(guint)filename_to_doc_idx(lua_tostring(L,1));
-				status=p_document->close(DOCS[idx]);
+				status=document_close(DOCS[idx]);
 			} else { return FAIL_STR_OR_NUM_ARG(1);	}
 		}
 	}
