@@ -1,3 +1,6 @@
+December 5, 2008 (ntrel)
+  Update to Geany API v115.
+
 September 17, 2008 (eht16)
   Fix to work with Geany API v93.
 
